--- a/universe/index.html
+++ b/universe/index.html
@@ -105,7 +105,7 @@ soundManager.onload = function() {
  	});
  	chordLow = soundManager.createSound({
    	   id: 'chordLow',
-   	   url: 'mp3/chordLow.mp3',
+   	   url: 'MP3/chordLow.mp3',
    	   autoLoad:true
  	});
  	chordHi = soundManager.createSound({
