--- a/universe/index.html
+++ b/universe/index.html
@@ -6,12 +6,12 @@
     <meta name="description" content="Welcome to Universe.">
     <meta name="keywords" content="">
     <meta name="viewport" content=" initial-scale=0.7 user-scalable=no">
-    <link href="/css/main.css" rel="stylesheet" media="screen" type="text/css">
+    <link href="css/main.css" rel="stylesheet" media="screen" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="/js/three.min.js"></script>
-    <script src="/js/OBJLoader.js"></script>
-    <script src="/js/CanvasRenderer.js"></script>
-    <script src="/js/Projector.js"></script>
+    <script src="js/three.min.js"></script>
+    <script src="js/OBJLoader.js"></script>
+    <script src="js/CanvasRenderer.js"></script>
+    <script src="js/Projector.js"></script>
     <title>UNIVERSE</title>
   </head>
   <body>
@@ -149,6 +149,6 @@
         </div>
       </div>
     </div>
-    <script src="/js/MeshHandler.js"></script>
+    <script src="js/MeshHandler.js"></script>
   </body>
 </html>
