--- a/birthdaycake/index.html
+++ b/birthdaycake/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
+<!-- Hey! Get out of here! -->
 <html>
 <head>
     <title>Birthday Cake by Michael Shillingburg</title>
 
-    <!-- Hey! Get out of here! -->
 
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
@@ -12,7 +12,7 @@
 		<p contenteditable spellcheck="false">Click &amp; Edit?</p>
 	</div>
 	<div class="foot">
-		Birthday Cake
+		<div class="button"><a href="birthdaycake.zip">Birthday Cake</a></div>
 	</div>
 
 
