--- a/birthdaycake/index.html
+++ b/birthdaycake/index.html
@@ -13,6 +13,7 @@
 	</div>
 	<div class="foot">
 		<div class="button"><a href="birthdaycake.zip">Birthday Cake</a></div>
+		by <a href="http://www.shillingburg.co/">Michael Shillingburg</a>
 	</div>
 
 
