--- a/nsite/index.html
+++ b/nsite/index.html
@@ -311,18 +311,18 @@
       if (window.DeviceOrientationEvent) {
     window.addEventListener("deviceorientation", function () {
         yValue = map_range(event.beta, -2.5, 2.5, -0.01, 0.03);
-        xValue = map_range(event.gamma, -2.5, 2.5, -0.02, 0.02);
+        xValue = map_range(event.gamma, -2.5, 2.5, -0.02, 0.02) * -1;
 
     }, true);
 } else if (window.DeviceMotionEvent) {
     window.addEventListener('devicemotion', function () {
       yValue = map_range(event.beta, -2.5, 2.5, -0.01, 0.03);
-        xValue = map_range(event.gamma, -2.5, 2.5, -0.02, 0.02);
+        xValue = map_range(event.gamma, -2.5, 2.5, -0.02, 0.02) * -1;
     }, true);
 } else {
     window.addEventListener("MozOrientation", function () {
      yValue = map_range(event.beta, -2.5, 2.5, -0.01, 0.03);
-        xValue = map_range(event.gamma, -2.5, 2.5, -0.02, 0.02);
+        xValue = map_range(event.gamma, -2.5, 2.5, -0.02, 0.02) * -1;
     }, true);
 }
 
