move up in the world

--- a/nsite/index.html
+++ b/nsite/index.html
@@ -16,7 +16,7 @@ now get outta here!
 <head>
     <title>&#10023; Michael Shillingburg &#10023;</title>
     <meta charset="UTF-8">
-    <meta name="description" content="Michael Shillingburg, a graphic designer making games and things that move.">
+    <meta name="description" content="Michael Shillingburg, a graphic designer making games and things that move">
     <meta name="keywords" content="michael, shillingburg, game, design, graphic, unity, fancymichael, michaelshillingburg, super, sculptor, caffeine">
     <meta name="author" content="Michael Shillingburg">
 
