--- a/nsite/index.html
+++ b/nsite/index.html
@@ -19,6 +19,7 @@ now get outta here!
     <meta name="description" content="Michael Shillingburg, a graphic designer making games and things that move">
     <meta name="keywords" content="michael, shillingburg, game, design, graphic, unity, fancymichael, michaelshillingburg, super, sculptor, caffeine">
     <meta name="author" content="Michael Shillingburg">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
 
     <link href='https://fonts.googleapis.com/css?family=Rubik:700,400italic,500,400' rel='stylesheet' type='text/css'>
