--- a/toys/bork/index.html
+++ b/toys/bork/index.html
@@ -3,10 +3,10 @@
 	
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<meta name="author" content="michael shillingburg">
-	<meta name="description" content="particle thing">
-	<meta name="keywords" content="nah">
+	<meta name="description" content="bork">
+	<meta name="keywords" content="bork bork, bork">
 	<link href="main.css" rel="stylesheet" media="screen" type="text/css">
-	<title>who knows</title>
+	<title>bork bork</title>
 </head>
 <body>
 	<div id="grid"></div>
