--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ now get outta here!
     <p><img src="bloo.png" /><br>
     <span class="centralblurbBigtext">Hi! I'm<br><b>
     <span class="w1">M</span><span class="w2">i</span><span class="w3">c</span><span class="w4">h</span><span class="w5">a</span><span class="w6">e</span><span class="w7">l</span>&nbsp;&nbsp;<span class="w1">S</span><span class="w2">h</span><span class="w3">i</span><span class="w4">l</span><span class="w5">l</span><span class="w6">i</span><span class="w7">n</span><span class="w8">g</span><span class="w9">b</span><span class="w10">u</span><span class="w11">r</span><span class="w12">g</span></b>.</span>
-    <br>I'm a graphic designer &amp; 3D illustrator creating fun experiences for people to view and interact with.<br>
+    <br>I'm an interface designer &amp; 3D illustrator creating fun experiences for people to see, interact with, and play.<br>
     <br><span class="centralblurbSmalltext">Want to collaborate on a project? Send me an email!</span></p>
   
   </div>
