--- a/trump/index.html
+++ b/trump/index.html
@@ -230,6 +230,7 @@ var __slice = Array.prototype.slice;
 		<p><a href="#canvas" data-color="#64ffe1" style="background-color: #64ffe1;"></a></p>
 	</div>
 
+  <div onclick="location.href = 'http://www.shillingburg.co/';" class="av"></div>
 </body>
 
 </html>
