--- a/trump/index.html
+++ b/trump/index.html
@@ -229,8 +229,14 @@ var __slice = Array.prototype.slice;
 		<p><a href="#canvas" data-color="#2ef5ff" style="background-color: #2ef5ff;"></a></p>
 		<p><a href="#canvas" data-color="#64ffe1" style="background-color: #64ffe1;"></a></p>
 	</div>
-
   <div onclick="location.href = 'http://www.shillingburg.co/';" class="av"></div>
+  <div class="sizebox">
+      <p><a href="#canvas" style="background-size: 10%;" data-size="3"></a></p>
+      <p><a href="#canvas" style="background-size: 24%;" data-size="7"></a></p>
+      <p><a href="#canvas" style="background-size: 40%;" data-size="12"></a></p>
+      <p><a href="#canvas" style="background-size: 59%;" data-size="20"></a></p>
+      <p><a href="#canvas" style="background-size: 70%;" data-size="50"></a></p>
+  </div>
 </body>
 
 </html>
